dependencies & astro specific

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@ dist/
 .output/
 
 # dependencies
-node_modules/
+# node_modules/
 
 # logs
 npm-debug.log*
@@ -25,7 +25,7 @@ pnpm-debug.log*
 *.sublime-project
 
 # Astro specific
-.astro/
+#.astro/
 
 # TypeScript
 *.tsbuildinfo
@@ -50,3 +50,4 @@ pnpm-debug.log*
 
 # Cache
 .cache/
+node_modules
