Added Data & Statistics Update

--- a/package.json
+++ b/package.json
@@ -11,26 +11,37 @@
     "generate-sitemap": "node scripts/generate-sitemap.js"
   },
   "dependencies": {
-    "@astrojs/markdown-remark": "^3.0.0",
-    "@astrojs/mdx": "^1.0.0",
+    "@astrojs/markdown-remark": "^4.0.0",
+    "@astrojs/mdx": "^2.0.0",
     "@astrojs/node": "^7.0.0",
+    "@astrojs/react": "^3.0.0",
     "@astrojs/tailwind": "^5.0.0",
-    "@headlessui/react": "^1.7.17",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.6",
     "@tailwindcss/typography": "^0.5.9",
+    "@types/leaflet": "^1.9.8",
+    "@types/node": "^20.11.5",
     "@types/nodemailer": "^6.4.17",
-    "astro": "^3.6.4",
+    "@types/react": "^18.2.48",
+    "@types/react-dom": "^18.2.18",
+    "alpinejs": "^3.13.3",
+    "astro": "^4.0.0",
     "astro-icon": "^1.1.4",
+    "chart.js": "^4.4.1",
+    "cheerio": "^1.0.0",
     "cloudinary": "^2.5.1",
     "date-fns": "^2.30.0",
     "googleapis": "^144.0.0",
     "gray-matter": "^4.0.3",
     "js-yaml": "^4.1.0",
+    "leaflet": "^1.9.4",
     "minisearch": "^7.1.1",
     "motion": "^10.16.2",
     "nanostores": "^0.9.5",
     "nodemailer": "^6.9.16",
+    "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
+    "react-dom": "^18.2.0",
     "remark-slug": "^7.0.1",
     "remark-toc": "^8.0.1",
     "tailwindcss": "^3.3.3",
