--- a/netlify.toml
+++ b/netlify.toml
@@ -1,18 +1,37 @@
-[build]
-  command = "npm run build"
-  publish = "dist"
+# Netlify configuration file
 
+# Build settings
+[build]
+  publish = "dist"
+  command = "npm run build"
+
+# Redirects for API endpoints
+[[redirects]]
+  from = "/api/*"
+  to = "/api/:splat"
+  status = 200
+
+# Handle 404s
 [[redirects]]
   from = "/*"
   to = "/404"
   status = 404
 
+# Headers for security
+[[headers]]
+  for = "/*"
+  [headers.values]
+    X-Frame-Options = "DENY"
+    X-XSS-Protection = "1; mode=block"
+    X-Content-Type-Options = "nosniff"
+    Referrer-Policy = "strict-origin-when-cross-origin"
+    Content-Security-Policy = "default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data:; font-src 'self' data:;"
+
+# Environment variables
+[build.environment]
+  NODE_VERSION = "18"
+
 [[redirects]]
   from = "/updates"
   to = "/updates/1"
   status = 302
-
-[[redirects]]
-  from = "/api/*"
-  to = "/api/:splat"
-  status = 200
